<resources>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <!--Существительные-->
    <string name="app_name">Финансы</string>
    <string name="income">Поступления</string>
    <string name="cost">Расходы</string>
    <string name="costRadioButton">Расход</string>
    <string name="incomeRadioButton">Поступление</string>
    <string name="category">Категория</string>
    <string name="categories">Категории</string>
    <string name="accounts">Счета</string>
    <string name="allAccounts">Все счета</string>
    <string name="date">Дата</string>
    <string name="other">Остальное</string>
    <string name="sum">Сумма</string>
    <string name="currency">Валюта</string>
    <string name="result">Итог</string>
    <string name="comment">Комментарий</string>
    <string name="account">Счёт</string>
    <string name="limit">Ограничение</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="dayBeforeYesterday">Позавчера</string>
    <string name="initialDate">Начальная дата</string>
    <string name="finalDate">Конечная дата</string>
    <string name="hexCode">HEX код</string>
    <string name="nameCategory">Название категории</string>
    <string name="allOperations">Все операции</string>
    <string name="scanner">Сканер</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>

    <string name="error">Ошибка</string>
    <string name="errorRead">Ошибка чтения</string>
    <string name="phoneNumberHaveNotBeenSend">Вы не отправили номер телефона</string>
    <string name="enterVerifyCode">Введите код подтверждения</string>
    <string name="youHaveNotBeenVerify">Вы не авторизировались</string>
    <string name="barcodeIsEmpty">Код чека не введён</string>

    <!--Глаголы-->
    <string name="plus">+</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="canceled">Отменено</string>
    <string name="back">Назад</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="add">Добавить</string>
    <string name="change">Изменить</string>
    <string name="remove">Удалить</string>
    <string name="read">Читать</string>
    <string name="inputName">Введите название</string>
    <string name="inputСolor">Выбрать цвет</string>
    <string name="inputDate">Введите дату</string>
    <string name="inputSum">Введите сумму</string>
    <string name="inputComment">Введите комментарий</string>
    <string name="chooseImage">Выберите изображение</string>
    <string name="chooseCategory">Выберите категорию</string>
    <string name="chooseAccount">Выберите счёт</string>
    <string name="chooseBank">Выберите банк</string>
    <string name="chooseCurrency">Выберите валюту</string>
    <string name="chooseLimit">Выберите ограничение</string>
    <string name="changeDate">Изменить дату</string>
    <string name="deleteReceipt">Удалить чек</string>
    <string name="scanned">Отсканировано</string>
    <string name="youDoNotEnterAccount">Вы не вошли в аккаунт</string>
    <string name="youEnterAs">Вы вошли как:</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="signIn">Войти</string>
    <string name="signOut">Выйти</string>

    <!-- Всплывающие сообщения -->
    <string name="accountTextFewLenght">Добавьте больше символов в названии</string>
    <string name="costSumWrongSum">Введите другую сумму</string>

    <string name="recordHaveAdded">Запись добавлена</string>
    <string name="categoryHaveAdded">Категория добавлена</string>
    <string name="accountHaveAdded">Счёт добавлен</string>
    <string name="recordHaveChanged">Запись изменена</string>
    <string name="categoryHaveChanged">Категория изменена</string>
    <string name="accountHaveChanged">Счёт изменен</string>
    <string name="recordHaveDeleted">Запись удалена</string>
    <string name="categoryHaveDeleted">Категория удалена</string>
    <string name="accountHaveDeleted">Счёт удалён</string>
    <string name="dataSuccesfulSave">Данные успешно сохранены</string>
    <string name="dataFailedSave">Ошибка сохранения данных</string>
    <string name="dataSuccesfulLoad">Данные успешно загруженны</string>
    <string name="dataFailedLoad">Ошибка загрузки данных</string>
    <string name="youHaveNotAuth">Вы не авторизировались</string>

    <!-- Диалоговые окна -->
    <string name="doYouWantSaveDataToServer">Вы уверенны, что хотите сохранить данные?</string>
    <string name="doYouWantLoadDataFromServer">Вы уверенны, что хотите загрузить данные?</string>

    <string name="doYouWantDeleteReceipt">Вы уверенны, что хотите удалить чек?</string>

    <!-- Заголовки для элементов меню-->
    <string name="enterAccount">Войти в аккаунт</string>
    <string name="statistics">Статистика</string>
    <string name="receiptsCheak">Проверка чеков</string>
    <string name="analytic">Аналитика</string>
    <string name="saveDataToServer">Сохранить данные</string>
    <string name="loadDataFromServer">Загрузить данные</string>
    <string name="readFromCvsFile">Чтение из CVS файла</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выйти</string>
    <!-- Для настроек-->
    <string name="basic">Базовые</string>

    <string name="language">Язык</string>
    <string name="languageDialogTitle">Выберите язык</string>
    <string name="theme">Тема</string>
    <string name="light">Светлая</string>
    <string name="night">Тёмная</string>

    <string name="advanced">Продвинутые</string>

    <!--Для статистики-->
    <string name="noMore">Не более</string>
    <string name="noLess">Не менее</string>

    <!--Для статистики-->
    <string name="textStatisticsResult">Доходы: + \nРасходы: - \nИтого </string>

    <!--Получение информации по чеку-->
    <string name="phoneNumber">Номер телефона</string>
    <string name="sendPhoneNumber">Отправить</string>
    <string name="cheakYourPhone">Проверьте телефон</string>
    <string name="verifyCode">Код подтверждения</string>
    <string name="sendVerifyCode">Отправить</string>
    <string name="verifyCodeSended">Код подтверждения отправлен</string>
    <string name="Barcode">Код чека</string>
    <string name="getBarcodeInformation">Получить данные</string>
    <string name="qrcodeSample1">t=20200727T174700&amp;s=746.00&amp;fn=9285000100206366&amp;i=34929&amp;fp=3951774668&amp;n=1</string>

    <string name="items">Предметы</string>
    <string name="name">Название</string>
    <string name="value">Стоимость</string>
    <string name="quantity">Количество</string>
    <string name="operator">Кассир</string>
    <string name="place">Место</string>
    <string name="address">Адрес</string>

    <string name="title">Заголовок</string>
    <string name="description">Описание</string>
    <!--logs-->
    <string name="ReadCvsActivity">ReadCvsActivity</string>


    <string name="limitIsFine">Ограничение выполняется</string>
    <string name="limitIsBreak">Ограничение нарушено</string>
    <string name="currentSum">Текущая сумма</string>
    <string name="doYouWantToDeleteThatLimit">Вы действительно хотите удалить это ограничение?</string>
</resources>