<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".costUtilities.CostEditActivity">

    <EditText
        android:id="@+id/editTextCostSum"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputSum"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/spinnerEditCategoryCost"
        app:layout_constraintStart_toStartOf="@+id/spinnerEditCategoryCost"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditCategoryCost" />

    <EditText
        android:id="@+id/editTextDateCost"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:hint="@string/inputDate"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/editTextCostSum"
        app:layout_constraintStart_toStartOf="@+id/editTextCostSum"
        app:layout_constraintTop_toBottomOf="@+id/editTextCostSum" />

    <Spinner
        android:id="@+id/spinnerEditAccountCost"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/chooseAccount"
        android:prompt="@string/chooseAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerEditCategoryCost"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/chooseCategory"
        android:dropDownWidth="match_parent"
        android:prompt="@string/chooseCategory"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/spinnerEditAccountCost"
        app:layout_constraintStart_toStartOf="@+id/spinnerEditAccountCost"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEditAccountCost" />

    <EditText
        android:id="@+id/editTextCostComment"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/inputComment"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        android:autofillHints="" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/editTextDateCost"
        app:layout_constraintStart_toStartOf="@+id/editTextDateCost"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateCost">

        <Button
            android:id="@+id/buttonTodayCost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/today" />

        <Button
            android:id="@+id/buttonDayBeforeYesterdayCost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/dayBeforeYesterday" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <Button
            android:id="@+id/buttonYesterdayCost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/yesterday" />

        <Button
            android:id="@+id/buttonChangeDateCost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/changeDate" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/costEditLineqrLayoutBorrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonAddOrChangeCost"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonDeleteCostOrBack"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>