<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".analytic.AnalyticActivity">

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/analyticCategory"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/chooseCategory" />

        <Spinner
            android:id="@+id/analyticSpinnerCurrency"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/chooseCurrency" />
    </LinearLayout>

    <EditText
        android:id="@+id/analyticLimitSum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sum"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout16"
        app:layout_constraintStart_toStartOf="@+id/linearLayout16"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout16" />

    <Spinner
        android:id="@+id/spinnerLimit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/chooseLimit"
        app:layout_constraintEnd_toEndOf="@+id/analyticLimitSum"
        app:layout_constraintStart_toStartOf="@+id/analyticLimitSum"
        app:layout_constraintTop_toBottomOf="@+id/analyticLimitSum" />

    <LinearLayout
        android:id="@+id/linearLayout15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/spinnerLimit"
        app:layout_constraintStart_toStartOf="@+id/spinnerLimit"
        app:layout_constraintTop_toBottomOf="@+id/spinnerLimit">

        <Button
            android:id="@+id/analyticButtonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/add" />

        <Button
            android:id="@+id/analyticButtonChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change" />
    </LinearLayout>

    <EditText
        android:id="@+id/analyticDate"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:gravity="center"
        android:hint="@string/date"
        android:inputType="date"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout15"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout15"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout15" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/analyticListLimits"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analyticDate" />

</androidx.constraintlayout.widget.ConstraintLayout>