<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountUtilities.AccountEditActivity">

    <EditText
        android:id="@+id/editTextAccountName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputName"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/AccountEditActivitySpinnerCurrency"
        app:layout_constraintStart_toStartOf="@+id/AccountEditActivitySpinnerCurrency"
        app:layout_constraintTop_toBottomOf="@+id/AccountEditActivitySpinnerCurrency" />

    <Spinner
        android:id="@+id/AccountEditActivitySpinnerBank"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/chooseBank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/AccountEditActivitySpinnerCurrency"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/chooseCurrency"
        app:layout_constraintEnd_toEndOf="@+id/AccountEditActivitySpinnerBank"
        app:layout_constraintStart_toStartOf="@+id/AccountEditActivitySpinnerBank"
        app:layout_constraintTop_toBottomOf="@+id/AccountEditActivitySpinnerBank" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonOkAccount"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonCancelAccount"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>