<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".categoryUtilities.CategoryEditActivity">

    <RadioGroup
        android:id="@+id/radioGroupCategoryType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:checkedButton="@id/radioButtonCategoryTypeCost"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonCategoryTypeCost"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/costRadioButton"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButtonCategoryTypeIncome"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/incomeRadioButton"
            android:textSize="16sp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageViewCategoryImage"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/radioGroupCategoryType"
        app:layout_constraintStart_toStartOf="@+id/radioGroupCategoryType"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupCategoryType"
        app:srcCompat="@android:drawable/list_selector_background"
        tools:srcCompat="@drawable/bank" />

    <EditText
        android:id="@+id/editTextCategpryName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout13"
        app:layout_constraintStart_toStartOf="@+id/linearLayout13"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout13" />

    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageViewCategoryImage"
        app:layout_constraintStart_toStartOf="@+id/imageViewCategoryImage"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCategoryImage">

        <Spinner
            android:id="@+id/spinnerChooseImageCateroty"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:addStatesFromChildren="false"
            android:backgroundTintMode="multiply"
            android:contentDescription="@string/chooseImage"
            android:hapticFeedbackEnabled="false"
            android:longClickable="false"
            android:prompt="@string/chooseImage"
            android:spinnerMode="dialog" />

        <Button
            android:id="@+id/buttonSetColorCategory"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/inputСolor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonAddOrChangeCategory"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/add" />

        <Button
            android:id="@+id/buttonDeleteCategoryOrBack"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>