<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".costUtilities.ListCostActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCosts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/spinnerAccountOnShowCost"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1.5"
            android:contentDescription="@string/chooseAccount" />

        <Spinner
            android:id="@+id/ListCostSpinnerCurrencies"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1.15"
            android:contentDescription="@string/chooseCurrency" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
        app:layout_constraintStart_toStartOf="@+id/linearLayout6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <EditText
            android:id="@+id/editTextInitialDateCost"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/initialDate"
            android:inputType="date|textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextFinalDateCost"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:ems="10"
            android:focusableInTouchMode="false"
            android:hint="@string/finalDate"
            android:inputType="date|textPersonName"
            android:autofillHints="" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>